[tool.poetry]
name = "kurono-kiseki"
version = "0.1.0"
description = ""
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.1.4"
mkdocs-roamlinks-plugin = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
